# random-item-generator-example

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.cc  main.cpp
src/core/: CMakeLists.txt  uuid.cc  uuid.h
src/core/item_generator/: CMakeLists.txt  armor_item.cc  armor_item.h  armor_item_builder.cc  armor_item_builder.h  base_item.cc  base_item.h  interface_item.h  item_builder.cc  item_builder.h  item_rarity.h  weapon_item.cc  weapon_item.h  weapon_item_builder.cc  weapon_item_builder.h
src/core/item_generator/item_data_types/: CMakeLists.txt  item_damage_type.h  item_rarity.h  item_status.h  item_type.h
src/core/item_generator/test/: CMakeLists.txt  armor_item_test.cc  base_item_test.cc  item_builder_test.cc  weapon_item_test.cc
src/core/item_generator/test/data/: expected_armor_item.json  expected_item_full.json  expected_item_no_owner.json  expected_weapon_item.json  invalid_syntax.json  missing_name.json  valid_item.json
src/ui/: CMakeLists.txt
